# yomochi

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  evals.yml
app/application/alerts/ports/: alert_repository.py
app/application/alerts/use_cases/: clear_alerts.py  list_alerts.py  mark_alert_read.py
app/application/categories/ports/: category_repository.py
app/application/categories/use_cases/: create_category.py  list_categories.py
app/application/chat/: _retrieval.py  _tools_executor.py
app/application/chat/ports/: chat_ai_client.py  chat_history_store.py  chat_token_budget.py  chat_tools.py  id_generator.py  work_unit.py
app/application/chat/use_cases/: chat_query.py  chat_stream.py  clear_chat_history.py  list_chat_history.py
app/application/common/: ai_errors.py  audit_event.py  context_quality.py  cursor.py  exceptions.py  outbox_event.py
app/application/common/ports/: audit_log.py  chunk_retriever.py  clock.py  consumer_idempotency_store.py  event_publisher.py  flusher.py  identity_context.py  metrics_recorder.py  outbox_admin.py  outbox_repository.py  quota_check.py  text_embedder.py  user_plan_lookup.py
app/application/ingestion/ports/: image_preprocessor.py  (+2 more)
app/application/insights/: config.py  embedding_pipeline.py  portrait_pipeline.py
app/application/recurring/: next_fire_date.py
app/application/users/: password_reset_token.py  session.py
app/domain/entities/: alert.py  base.py  category.py  insight.py  recurring_rule.py  transaction.py  user.py
app/domain/exceptions/: __init__.py  domain_errors.py
app/domain/ports/: __init__.py  id_generator.py  password_hasher.py
app/domain/services/: alert_threshold.py  behavioral_shift_detector.py  monthly_aggregator.py  portrait_aggregator.py
app/domain/value_objects/: __init__.py  budget_summary_snapshot.py  email.py  enums.py  ids.py  money.py  parsed_receipt.py  password.py  reporting_period.py
app/inbound/http/: router.py
app/inbound/messaging/: _event_id.py  insight_consumer.py  transaction_consumer.py
app/main/: logging.py
app/main/api/: app_factory.py  asgi.py
app/main/config/: __init__.py  loader.py  settings.py
app/main/insight/: main.py  refresh_tick.py
app/main/ioc/: __init__.py  providers.py  worker_providers.py
app/main/outbox/: main.py
app/main/portrait/: main.py  refresh_tick.py
app/main/scheduler/: main.py  shift_alert_tick.py
app/main/transaction/: main.py
app/outbound/auth/: jwt.py
app/outbound/observability/: otel.py  prometheus.py  prometheus_metrics_recorder.py  propagation.py
app/outbound/outbox/: poller.py
app/outbound/persistence_sqla/: constraint_names.py
deploy/helm/yomochi/: Chart.yaml  values-prod.yaml  values-vps.yaml  values.yaml
deploy/k3s/: bootstrap.sh
deploy/observability/: promtail.yml
deploy/observability/prometheus/: prometheus.yml
deploy/sealed-secrets/: pg-user-secret.yaml.example  secret.yaml.example
docs/: ARCHITECTURE.md  DATA_FLOW.md
scripts/: bootstrap_evals.py  generate_openapi_schema.sh  replay_outbox.py  seed_demo.py
tests/: conftest.py  test_health.py
tests/evals/: budget.py  conftest.py  openai_interceptor.py  reporter.py  runner.py  snapshot.py  test_budget.py  test_openai_interceptor.py  test_reporter.py  test_runner.py  test_snapshot.py
tests/evals/categorization/: scorer.py  test_categorization_quality.py  test_scorer.py
tests/evals/chat/: golden.jsonl  test_chat_evals.py
tests/evals/golden/: categorization.json  insights.json  search.json
tests/evals/insights/: judge.py  rubric.py  test_insight_quality.py  test_judge.py  test_rubric.py
tests/evals/voice/: test_voice_extraction.py
tests/fakes/: id_generator.py  password_hasher.py  repositories.py
tests/fixtures/personas/: loader.py  meiko_tokyo.json
tests/integration/: conftest.py  factories.py  test_alerts.py  test_auth.py  test_categories.py  test_chat.py  test_chat_tools.py  test_dirty_periods_idempotency.py  test_e2e_smoke.py  test_embedding_refresh_loop.py  test_insights.py  test_outbox.py  test_portrait_chunk_retriever.py  test_portrait_queue.py  test_quota_atomicity.py  test_recurring_rules.py  test_reports.py  test_search.py  test_transactions.py  test_users.py
tests/integration/ingestion/: test_parse_receipt_api.py
tests/integration/messaging/: conftest.py  test_insight_dlq.py
tests/integration/outbox/: conftest.py  test_outbox_poller.py  test_outbox_poller_partial_batch.py  test_outbox_replay.py  test_trace_propagation.py
tests/integration/scheduler/: test_reaper_tick.py  test_shift_alert_job.py
tests/migrations/: test_stairway.py
tests/smoke/: test_auth_flow.py
tests/unit/: test_settings.py
tests/unit/application/: test_cursor_decode.py  test_e2e_insight_flow.py
tests/unit/domain/: test_parsed_receipt.py  test_reporting_period.py
tests/unit/http/: test_error_handlers.py  test_validation.py
tests/unit/main/: test_logging_otel_injection.py  test_portrait_refresh_tick.py  test_worker_apps_smoke.py  test_worker_providers_isolation.py
tests/unit/messaging/: test_event_id.py  test_insight_consumer.py  test_transaction_consumer.py  test_transaction_consumer_payload_shape.py
tests/unit/middleware/: test_cors.py  test_idempotency.py  test_rate_limit.py  test_request_id.py  test_security_headers.py
tests/unit/scripts/: test_replay_outbox.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx
web/src/components/: FeatureErrorBoundary.tsx  QuerySkeleton.tsx  error-boundary.tsx  providers.tsx
web/src/hooks/: useConfirm.tsx  useDebouncedValue.ts  useKeyboardShortcuts.ts
web/src/lib/: utils.ts
web/tests/e2e/: auth-cache-isolation.spec.ts  auth.spec.ts  categories.spec.ts  chat.spec.ts  critical-path.spec.ts  dashboard-month-param.spec.ts  fixtures.ts  helpers.ts  recurring.spec.ts  search.spec.ts  transactions.spec.ts
(+462 files in other folders)
